part-1/exercise_1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
  labels:
    app: log-output-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - name: logoutput
        image: juhosii/devops-kubernetes:1.10.1
        volumeMounts:
        - name: shared-data
          mountPath: /usr/src/app/files
      - name: logsender
        image: juhosii/devops-kubernetes:1.10.2
        ports:
        - containerPort: 3001 
        volumeMounts:
        - name: shared-data
          mountPath: /usr/src/app/files
